[package]
name = "grader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
canvasapi = {git = "https://gitlab.com/kylerosenberg/canvasapi"}
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
reqwest = "0.11"
futures = "0.3.24"
strum = { version = "0.24", features = ["derive"] }
zip-extract = "0.1.1"
colored = "2.0.0"
regex = "1.6.0"
once_cell = "1.14.0"
openssl = { version = "0.10.41", features = ["vendored"]}